@@ -1304,6 +1304,7 @@ the result is unspecified. The following format operators may be used:
   \texttt{@S} & Start page of this chunk \\
   \texttt{@E} & End page of this chunk \\
   \texttt{@B} & Bookmark name at this page, if any. \\
+  \texttt{@b<w>@} & Bookmark name at this page, if any, truncated to \texttt{<n>} characters.\\
 \end{tabular}
 \end{center}
 
@@ -1344,6 +1345,16 @@ one of the output files.
   \begin{framed}
   \centering
   \verb! / ? < > \ : * | " ^ + =!
+  \end{framed}
+
+\noindent The bookmark may be truncated by using the \texttt{@b} variant:
+
+  \begin{framed}\small
+    \noindent\verb!cpdf -split-bookmarks 0 a.pdf -o @b10@.pdf!
+
+    \vspace{2.5mm}
+    \noindent Split \texttt{a.pdf} on bookmark boundaries, using the first 10 characters of bookmark text as the filename.
+
   \end{framed}
 
 \section{Splitting to Maximum Size}
