@@ -2,6 +2,8 @@
 
 o New -center-to-fit centres pages on a given paper size
 o Allow bold, italic, colours for bookmarks
+o Clean up @B implementation for -split-on-bookmarks
+o Add @b for trimmed bookmarks
 
 2.7.2 (October 2024)
 
